fix: update dependencies and version to v0.2.2 bump version & improve react security issue

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-portfolio",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "private": true,
   "description": "A beautiful 3D-themed portfolio template built with Next.js 15, Tailwind CSS 4, and Framer Motion",
   "keywords": [
@@ -29,22 +29,22 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.13.8",
-    "framer-motion": "^12.23.24",
-    "motion": "^12.23.24",
-    "next": "15.5.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "framer-motion": "^12.23.26",
+    "motion": "^12.23.26",
+    "next": "^15.5.9",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "2.2.0",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
-    "@biomejs/biome": "2.2.0"
+    "typescript": "^5"
   }
 }
